<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.evanescent.mytasks.ui.home.TasksActivity">
    <!--<item
        android:id="@+id/menu"
        android:title="Menu"
        android:icon="@drawable/ic_menu_black_24dp"
        app:showAsAction="always" />-->


    <item
        android:id="@+id/done"
        android:title="@string/done"
        android:icon="@drawable/ic_baseline_task_alt_24"
        app:showAsAction="always"
        app:iconTint="?attr/colorOnPrimary" />

    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:icon="@drawable/ic_baseline_delete_outline_24"
        app:showAsAction="always"
        app:iconTint="?attr/colorOnPrimary" />

    <item
        android:id="@+id/moreOptions"
        android:title="@string/important"
        android:enabled="false"
        android:visible="false"
        android:icon="@drawable/ic_more_vert_24px"
        app:showAsAction="always"
        app:iconTint="?attr/colorOnPrimary" />
</menu>
