<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switch_list"
        android:paddingTop="12dp"
        android:visibility="gone"
        android:layout_gravity="center"
        android:textSize="19sp"
        android:gravity="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/all_lists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingTop="@dimen/list_item_spacing_half"
        android:paddingBottom="@dimen/list_item_spacing_half"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        tools:context=".ui.BottomFragment"
        android:background="@color/background"
        tools:listitem="@layout/list_item"
        tools:itemCount="4"/>

    <LinearLayout
        android:id="@+id/separatorLists"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:alpha="0.6"
        android:backgroundTint="@color/backgroundRipple"
        android:background="#FFFFFF"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/createList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:background="@drawable/list_item_bg">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:tint="@color/textContent"
            android:alpha="0.8"
            android:contentDescription="@string/add_list"
            android:src="@drawable/outline_add_circle_outline_24"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:textColor="@color/textContent"
            android:paddingBottom="4dp"
            android:alpha="0.8"
            android:textSize="18sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/create_new_list" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:background="@drawable/list_item_bg">

        <ImageView
            android:id="@+id/icon2"
            android:layout_width="28dp"
            android:layout_height="28dp"
            app:tint="@color/textContent"
            android:alpha="0.8"
            android:contentDescription="@string/icon_settings"
            android:src="@drawable/ic_settings_black_24dp"
            android:layout_marginStart="16dp"/>

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:paddingLeft="16dp"
            android:paddingTop="4dp"
            android:paddingRight="16dp"
            android:textColor="@color/textContent"
            android:paddingBottom="4dp"
            android:alpha="0.8"
            android:textSize="18sp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:text="@string/parametres" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/separatorLists2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:alpha="0.6"
        android:backgroundTint="@color/backgroundRipple"
        android:background="#FFFFFF"
        android:orientation="horizontal" />

    <LinearLayout
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:visibility="gone"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="8dp"
        android:padding="8dp"
        android:background="@drawable/list_item_bg">

        <ImageView
            android:id="@+id/picture"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="1dp"
            app:tint="@color/textContent"
            android:alpha="0.8"
            android:contentDescription="@string/user_pic"
            android:src="@drawable/ic_baseline_face_24"
            android:layout_marginStart="8dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingLeft="16dp"
                android:paddingTop="4dp"
                android:paddingRight="16dp"
                android:textColor="@color/textContent"
                android:paddingBottom="0dp"
                android:alpha="0.8"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/utilisateur"
                />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:paddingLeft="16dp"
                android:paddingTop="0dp"
                android:paddingRight="16dp"
                android:textColor="@color/textContent"
                android:paddingBottom="4dp"
                android:alpha="0.6"
                android:textSize="14sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/email_example"
                />

        </LinearLayout>



    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:padding="2dp"
        android:layout_marginBottom="4dp"
        android:textSize="12sp"
        android:gravity="center"
        android:text="@string/inspiration"/>

</LinearLayout>

